# cookiecutter-pypoetry

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
